--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,16 @@
             <artifactId>Componentes</artifactId>
             <version>UTF-16</version>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE121</version>
+        </dependency>
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
     <name>Cajero</name>
 </project>
